fix contact overflow on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,9 @@ a {
 }
 
 .container {
-  /*height: 100vh;
-  position: relative;*/
   height: 100vh;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .content-wrapper {
